nested_foreach/resources/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: tls-example-ingress
spec:
  tls:
  - hosts:
    - https-example.foo.com
    secretName: testsecret-tls
  - hosts:
    - https-example2.foo.com
    secretName: testsecret-tls-2
  rules:
  - host: https-example.foo.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: service1
            port:
              number: 80
  - host: https-example2.foo.com
    http:
      paths:
      - path: "/"
        pathType: Prefix
        backend:
          service:
            name: service2
            port:
              number: 80
